Bug 489403 - Launch feedback cursor animation icon appears pixelated with fractional scale
Summary: Launch feedback cursor animation icon appears pixelated with fractional scale
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 6.1.1
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-28 20:55 UTC by Pavel Dobiáš
Modified: 2026-03-25 18:54 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.4
Sentry Crash Report:


Attachments
Launch animation pixelation showcase (758.16 KB, video/mp4)
2024-06-28 20:55 UTC, Pavel Dobiáš
Details
Recording of the bug at 225% display scale (1.13 MB, video/x-matroska)
2024-07-11 09:13 UTC, Pavel Dobiáš
Details
steam launch icon at 100% display scale (1.63 KB, image/png)
2025-05-05 13:56 UTC, Tobias Zwick
Details
steam launch icon at 125% display scale (2.36 KB, image/png)
2025-05-05 13:56 UTC, Tobias Zwick
Details
steam launch icon at 275% display scale (6.11 KB, image/png)
2025-05-05 13:56 UTC, Tobias Zwick
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pavel Dobiáš 2024-06-28 20:55:58 UTC
Created attachment 171148 [details]
Launch animation pixelation showcase

SUMMARY
When using fractional scaling factor (e.g. 125%), icon animation shown next to the cursor when opening an app appears pixelated. 

STEPS TO REPRODUCE
1. Set launch feedback cursor animation (e.g. to bouncing).
2. Open an application from the task manager.
3. Observe the animation near the cursor.

OBSERVED RESULT
The icon appears pixelated. See attached video for reference.

EXPECTED RESULT
The icon appears clearly.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 40 KDE Spin
KDE Plasma Version: 6.1.1
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.1

ADDITIONAL INFORMATION
Display: 1920x1080@125%
Comment 1 Nate Graham 2024-07-03 00:14:34 UTC
With every app, or just Steam?
Comment 2 Pavel Dobiáš 2024-07-05 14:51:04 UTC
(In reply to Nate Graham from comment #1)
> With every app, or just Steam?

Every app, I used Steam as an example.
Comment 3 Nate Graham 2024-07-10 20:51:57 UTC
Probably an XWayland integration issue, then.

I don't notice it at 225% scale, FWIW. It's possible it's happening but I'm just not noticing due to the high scale factor and short duration of the animation.
Comment 4 Pavel Dobiáš 2024-07-11 09:12:23 UTC
(In reply to Nate Graham from comment #3)
> Probably an XWayland integration issue, then.
> 
> I don't notice it at 225% scale, FWIW. It's possible it's happening but I'm
> just not noticing due to the high scale factor and short duration of the
> animation.

How is it an XWayland issue though? It happens to even native Wayland apps. Is it that the component for launch feedback animation runs in XWayland? Also I tried setting my display size to 225% and I can still see it, but my monitor is small so it's easier to see.
Comment 5 Pavel Dobiáš 2024-07-11 09:13:25 UTC
Created attachment 171561 [details]
Recording of the bug at 225% display scale

Recording of the bug at 225% display scale
Comment 6 Nate Graham 2024-07-22 21:14:49 UTC
Oh hey, you're right. Indeed, nothing to do with XWayland. Can reproduce if I actually look at it properly. :)
Comment 7 Pavel Dobiáš 2024-07-22 21:17:34 UTC
(In reply to Nate Graham from comment #6)
> Oh hey, you're right. Indeed, nothing to do with XWayland. Can reproduce if
> I actually look at it properly. :)

Great, I hope it's gonna get fixed in the future.
Comment 8 gudvinr+kde 2025-02-19 07:06:49 UTC
Still an issue. Thunderbird launch icon looks like a mess even with 125% scale. But not very noticeable with Dolphin.

Operating System: Arch Linux 
KDE Plasma Version: 6.3.1
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Kernel Version: 6.13.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Graphics Processor: AMD Radeon RX Vega M GL Graphics
Comment 9 Tobias Zwick 2025-05-05 13:56:03 UTC
Created attachment 180948 [details]
steam launch icon at 100% display scale
Comment 10 Tobias Zwick 2025-05-05 13:56:21 UTC
Created attachment 180949 [details]
steam launch icon at 125% display scale
Comment 11 Tobias Zwick 2025-05-05 13:56:41 UTC
Created attachment 180950 [details]
steam launch icon at 275% display scale
Comment 12 Tobias Zwick 2025-05-05 13:59:57 UTC
I did a number of tests, see the added attachments.

It looks to me that the launch feedback cursor icon always looks blurry, independent of the display scale. Except if the icon itself is pretty large (due to large display scale).

My hunch is, that a large version of the application that is being launched is used for the launch icon and then scaled down, instead of using a version of the icon of appropriate size (if it is a raster graphic) or rendering the icon at the correct size right away (if it is a vector graphic).
Comment 13 gudvinr+kde 2025-06-20 10:53:40 UTC
Still an issue

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Graphics Platform: Wayland
Comment 14 Vlad Zahorodnii 2026-03-23 13:52:05 UTC
Git commit 3acc98e6da9c0cf55942e9df3a206c8dbd20c489 by Vlad Zahorodnii.
Committed on 23/03/2026 at 13:33.
Pushed by vladz into branch 'master'.

plugins/startupfeedback: Fix pixelated icons

The icons are loaded with the logical size, which results in the
pixelated look.

M  +8    -7    src/plugins/startupfeedback/startupfeedback.cpp
M  +2    -2    src/plugins/startupfeedback/startupfeedback.h

https://invent.kde.org/plasma/kwin/-/commit/3acc98e6da9c0cf55942e9df3a206c8dbd20c489
Comment 15 Vlad Zahorodnii 2026-03-23 14:19:12 UTC
Git commit da8c1fa59c3bc820c5a60d219d0f10348659a140 by Vlad Zahorodnii.
Committed on 23/03/2026 at 13:52.
Pushed by vladz into branch 'Plasma/6.6'.

plugins/startupfeedback: Fix pixelated icons

The icons are loaded with the logical size, which results in the
pixelated look.
(cherry picked from commit 3acc98e6da9c0cf55942e9df3a206c8dbd20c489)

M  +8    -7    src/plugins/startupfeedback/startupfeedback.cpp
M  +2    -2    src/plugins/startupfeedback/startupfeedback.h

https://invent.kde.org/plasma/kwin/-/commit/da8c1fa59c3bc820c5a60d219d0f10348659a140