plugins/startupfeedback: Fix pixelated icons

The icons are loaded with the logical size, which results in the
pixelated look.

BUG: 489403
(cherry picked from commit 3acc98e6da9c0cf55942e9df3a206c8dbd20c489)